--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,9 +47,9 @@ jobs:
 
       - name: Setup Database
         run: |
-          bin/rails db:create
-          bin/rails db:schema:load
-          bin/rails db:migrate
+          bundle exec bin/rails db:create
+          bundle exec bin/rails db:schema:load
+          bundle exec bin/rails db:migrate
 
       - name: Run tests
         run: |
