--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,15 +44,24 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y postgresql-client libpq-dev imagemagick
+          # Install Chrome for system tests
+          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
 
       - name: Setup Database
         run: |
           bundle exec rails db:prepare
 
-      - name: Run tests
-        run: |
-          bundle exec rails test
-          bundle exec rails test:system
+      - name: Precompile assets
+        run: bundle exec rails assets:precompile
+
+      - name: Run unit tests
+        run: bundle exec rails test
+
+      - name: Run system tests
+        run: bundle exec rails test:system
 
       - name: Run security checks
         run: |
